# vet-knowledge

./: .gitignore  CLAUDE.md  CODE_WIKI.md  LICENSE  README.md  check_config.json  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  启动兽医知识库.bat  启动知识库.bat  项目交接提示词.md  项目架构.md
_knowledge/rules/: static_analysis_rules.md
_knowledge/workflows/: ci_check_standard.md  error_handling_standard.md  fix_sop.md  testing_standard.md
_tools/: check.py
_tools/dev/: check.py  check_config_schema.json
data/: cases.yaml  diagnostic_tests.yaml  diseases.yaml  drugs.yaml  relations.yaml  symptoms.yaml  tags.yaml  treatment_rules.yaml  treatment_rules_fixed.yaml  开发文档_病例库规划.md
data/cases/: case_001.md  case_002.md  case_003.md  case_004.md  case_005.md  case_006.md  case_007.md  case_008.md  case_009.md  case_010.md  case_011.md  case_012.md  case_013.md  case_014.md  case_015.md
data/diseases/: dis_001.md  dis_002.md  dis_003.md  dis_004.md  dis_005.md  dis_006.md  dis_007.md  dis_008.md  dis_009.md  dis_010.md  dis_011.md  dis_012.md  dis_013.md  dis_014.md  dis_015.md  dis_016.md  dis_017.md  dis_018.md  dis_019.md  dis_020.md  dis_021.md  dis_022.md  dis_023.md  dis_024.md  dis_025.md  dis_026.md  dis_027.md  dis_028.md  dis_029.md  dis_030.md  dis_031.md  dis_032.md  dis_033.md  dis_034.md  dis_035.md  dis_036.md  dis_037.md  dis_038.md  dis_039.md  dis_040.md  (+44 more)
data/drugs/: drug_001.md  drug_002.md  drug_003.md  drug_004.md  drug_005.md  drug_006.md  drug_007.md  drug_008.md  drug_009.md  drug_010.md  drug_011.md  drug_012.md  drug_013.md  drug_014.md  drug_015.md  drug_016.md  drug_017.md  drug_018.md  drug_019.md  drug_020.md  drug_021.md  drug_022.md  drug_023.md  drug_024.md  drug_025.md  drug_026.md  drug_027.md  drug_028.md  drug_029.md  drug_030.md  drug_031.md  drug_032.md  drug_033.md  drug_034.md  drug_035.md  drug_036.md  drug_037.md  drug_038.md  drug_039.md  drug_040.md  (+29 more)
data/symptoms/: sym_001.md  sym_002.md  sym_003.md  sym_004.md  sym_005.md  sym_006.md  sym_007.md  sym_008.md  sym_009.md  sym_010.md  sym_011.md  sym_012.md  sym_013.md  sym_014.md  sym_015.md  sym_016.md  sym_017.md  (+28 more)
docs/: WORKFLOW_REFORM.md
src/: App.vue
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/data/seed/: 001_initial.sql  schema.sql
src-tauri/src/: engine.rs  lib.rs  main.rs
src-tauri/src/commands/: diagnose.rs  flashcards.rs  game.rs  import_export.rs  knowledge.rs  mod.rs  search.rs  treatments.rs
src-tauri/src/db/: mod.rs  models.rs
src-tauri/src/sidecar/: manager.rs  mod.rs  protocol.rs
tools/: _build_data.py  _gen_populate.py  _make_script.py  _write_data.py  _write_json.py  build-with-subws.ps1  drug_fields.json  gen_from_yaml.py  populate_drug_fields.py
(+69 files in other folders)
